[package]
edition = "2021"
name = "direnv"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/juspay/direnv-rs"
description = "Rust bindings for direnv"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
thiserror = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
which = { version = "4.4.2" }
semver = { version = "1.0.22", features = ["serde"] }
serde_repr = "0.1.18"
